# info7500-assignment-2

./: .gitattributes  .gitignore  .gitmodules  test.secret
merkle/: Cargo.toml  proof.yaml  proof.yaml.old  proof_gen_1000_95.yaml  proof_gen_2_0.yaml  proof_gen_2_1.yaml  proof_gen_3_0.yaml  proof_gen_3_1.yaml  proof_gen_3_2.yaml  proof_gen_8_3.yaml
merkle/solution/: prover.rs
merkle/src/: main.rs  prover.rs  util.rs  verifier.rs
vickery/: BasicVickreyAuction.sol  Instructions.md  README.md  readme.md
vickery-tokenized/: TokenizedVickeryAuction.sol
